2022-03-02  Per Arne Vollan  <pvollan@apple.com>

        [iOS] Hard link AVPictureInPictureController
        https://bugs.webkit.org/show_bug.cgi?id=237227

        Reviewed by Brent Fulgham.

        Hard linking instead of soft linking should be a small performance improvement.

        * Configurations/WebKit.xcconfig:
        * UIProcess/Cocoa/WebProcessPoolCocoa.mm:
        (WebKit::WebProcessPool::platformInitializeWebProcess):

2022-03-02  Wenson Hsieh  <wenson_hsieh@apple.com>

        [iOS] Copy context menu action should be titled "Copy Link" when long pressing a non-image link
        https://bugs.webkit.org/show_bug.cgi?id=237367
        rdar://77397886

        Reviewed by Devin Rousso.

        Change the current title of the "Copy" context menu action to "Copy Link", when showing the context menu for a
        non-image link. See below for more details.

        Tests:  fast/events/touch/ios/long-press-on-link.html
                fast/events/touch/ios/long-press-on-image.html

        * UIProcess/API/Cocoa/_WKActivatedElementInfo.mm:
        (-[_WKActivatedElementInfo _initWithInteractionInformationAtPosition:userInfo:]):
        (-[_WKActivatedElementInfo _isImage]):

        Add a helper method to return whether or not the activated element represents an image. Crucially, this will
        return YES in the case of image links, even though the activated element type is _WKActivatedElementTypeLink.
        We consult this below to still show "Copy" in the case of image links, instead of "Copy Link".

        * UIProcess/API/Cocoa/_WKActivatedElementInfoInternal.h:
        * UIProcess/API/Cocoa/_WKElementAction.mm:
        (+[_WKElementAction _elementActionWithType:customTitle:assistant:]):
        (+[_WKElementAction _elementActionWithType:info:assistant:]):

        Add a `_WKActivatedElementInfo` argument to `-_elementActionWithType:assistant:`, and use this to set a custom